[gd_scene load_steps=25 format=2]

[ext_resource path="res://src/screens/menu/Menu.gd" type="Script" id=1]
[ext_resource path="res://theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/musicOff.png" type="Texture" id=3]
[ext_resource path="res://assets/musicOn.png" type="Texture" id=4]
[ext_resource path="res://assets/audioOn.png" type="Texture" id=5]
[ext_resource path="res://assets/audioOff.png" type="Texture" id=6]
[ext_resource path="res://assets/information.png" type="Texture" id=7]
[ext_resource path="res://assets/right.png" type="Texture" id=8]
[ext_resource path="res://assets/left.png" type="Texture" id=9]
[ext_resource path="res://src/screens/menu/info/Info.tscn" type="PackedScene" id=10]
[ext_resource path="res://panel.tres" type="StyleBox" id=11]
[ext_resource path="res://assets/github.svg" type="Texture" id=12]
[ext_resource path="res://assets/font/manrope.thin.otf" type="DynamicFontData" id=13]

[sub_resource type="Animation" id=1]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Menu:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -720, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Menu:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -720, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "FirstFadeIn"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("Menu:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -720, 0 ), Vector2( -720, 0 ), Vector2( -270, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Fade:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.7, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "InfoFadeIn"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Menu:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 720, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Info:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 720, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=14]
resource_name = "InfoFadeOut"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Menu:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 720, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Info:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 720, 0 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("LevelSelect:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 720, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Menu:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 720, 0 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Menu:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 720, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LevelSelect:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 720, 0 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("LevelSelect/Levels:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LevelSelect/Levels:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.6, 0.6 ), Vector2( 0.9, 0.9 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("LevelSelect/Levels:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LevelSelect/Levels:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.9, 0.9 ), Vector2( 0.6, 0.6 ) ]
}

[sub_resource type="Animation" id=12]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Fade:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Info:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 720, 0 ) ]
}

[sub_resource type="DynamicFont" id=15]
size = 53
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 13 )

[node name="MenuBase" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 360, 640 )
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FadeIn = SubResource( 1 )
anims/FadeOut = SubResource( 2 )
anims/FirstFadeIn = SubResource( 3 )
anims/InfoFadeIn = SubResource( 13 )
anims/InfoFadeOut = SubResource( 14 )
anims/LevelFadeIn = SubResource( 4 )
anims/LevelFadeOut = SubResource( 5 )
anims/LevelOnlyFadeIn = SubResource( 6 )
anims/LevelOnlyFadeOut = SubResource( 7 )
anims/RESET = SubResource( 12 )

[node name="Fade" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.105882, 0.105882, 0.231373, 1 )

[node name="LevelSelect" type="Control" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 720.0
margin_right = 720.0
theme = ExtResource( 2 )

[node name="Levels" type="GridContainer" parent="LevelSelect"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.407031
anchor_right = 0.5
anchor_bottom = 0.407031
margin_left = -310.0
margin_top = -440.0
margin_right = 310.0
margin_bottom = 440.0
rect_scale = Vector2( 0.9, 0.9 )
rect_pivot_offset = Vector2( 310, 440 )
custom_constants/vseparation = 206
custom_constants/hseparation = 21
columns = 3
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Back" type="Button" parent="LevelSelect"]
anchor_left = 0.506
anchor_top = 0.896
anchor_right = 0.506
anchor_bottom = 0.896
margin_left = -130.32
margin_top = -62.88
margin_right = 130.68
margin_bottom = 63.12
rect_min_size = Vector2( 115, 0 )
text = " menu "
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Next" type="TextureButton" parent="LevelSelect"]
modulate = Color( 0.529412, 0.917647, 0.807843, 1 )
anchor_left = 0.833
anchor_top = 0.895
anchor_right = 0.833
anchor_bottom = 0.895
margin_left = -99.7601
margin_top = -99.6001
margin_right = 0.239929
margin_bottom = 0.399902
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Prev" type="TextureButton" parent="LevelSelect"]
modulate = Color( 0.529412, 0.917647, 0.807843, 1 )
anchor_left = 0.167
anchor_top = 0.895
anchor_right = 0.167
anchor_bottom = 0.895
margin_left = -100.24
margin_top = -99.6001
margin_right = -0.240005
margin_bottom = 0.399902
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Menu" type="Control" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -720.0
margin_right = -720.0

[node name="Buttons" type="VBoxContainer" parent="Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -286.0
margin_top = -425.0
margin_right = 286.0
margin_bottom = 587.0
rect_pivot_offset = Vector2( 188, 0 )
alignment = 1

[node name="Level" type="HBoxContainer" parent="Menu/Buttons"]
margin_right = 572.0
margin_bottom = 126.0
alignment = 1

[node name="PrevLevel" type="Button" parent="Menu/Buttons/Level"]
margin_right = 89.0
margin_bottom = 126.0
text = " < "

[node name="VSeparator" type="VSeparator" parent="Menu/Buttons/Level"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 93.0
margin_right = 126.0
margin_bottom = 126.0
size_flags_horizontal = 3

[node name="Level" type="Button" parent="Menu/Buttons/Level"]
margin_left = 130.0
margin_right = 441.0
margin_bottom = 126.0
text = " level 12 "

[node name="VSeparator2" type="VSeparator" parent="Menu/Buttons/Level"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 445.0
margin_right = 479.0
margin_bottom = 126.0
size_flags_horizontal = 3

[node name="NextLevel" type="Button" parent="Menu/Buttons/Level"]
margin_left = 483.0
margin_right = 572.0
margin_bottom = 126.0
text = " > "

[node name="HSeparator" type="HSeparator" parent="Menu/Buttons"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 150.0
margin_right = 572.0
margin_bottom = 516.0
size_flags_vertical = 3

[node name="Play" type="Button" parent="Menu/Buttons"]
margin_top = 540.0
margin_right = 572.0
margin_bottom = 666.0
text = "PLAY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator2" type="HSeparator" parent="Menu/Buttons"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 690.0
margin_right = 572.0
margin_bottom = 770.0
rect_min_size = Vector2( 0, 80 )

[node name="Settings" type="HBoxContainer" parent="Menu/Buttons"]
margin_top = 794.0
margin_right = 572.0
margin_bottom = 914.0
custom_constants/separation = 18
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sfx" type="Panel" parent="Menu/Buttons/Settings"]
margin_left = 19.0
margin_right = 139.0
margin_bottom = 120.0
rect_min_size = Vector2( 120, 120 )
rect_pivot_offset = Vector2( 60, 60 )
custom_styles/panel = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SfxButton" type="TextureButton" parent="Menu/Buttons/Settings/Sfx"]
self_modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -50.0
margin_right = 50.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 50, 50 )
toggle_mode = true
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )

[node name="Music" type="Panel" parent="Menu/Buttons/Settings"]
show_behind_parent = true
margin_left = 157.0
margin_right = 277.0
margin_bottom = 120.0
rect_min_size = Vector2( 120, 120 )
rect_pivot_offset = Vector2( 60, 60 )
custom_styles/panel = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicButton" type="TextureButton" parent="Menu/Buttons/Settings/Music"]
self_modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -50.0
margin_right = 50.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 50, 50 )
toggle_mode = true
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )

[node name="Info" type="Panel" parent="Menu/Buttons/Settings"]
show_behind_parent = true
margin_left = 295.0
margin_right = 415.0
margin_bottom = 120.0
rect_min_size = Vector2( 120, 120 )
rect_pivot_offset = Vector2( 60, 60 )
custom_styles/panel = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfoButton" type="TextureButton" parent="Menu/Buttons/Settings/Info"]
self_modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -50.0
margin_right = 50.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 50, 50 )
texture_normal = ExtResource( 7 )

[node name="Github" type="Panel" parent="Menu/Buttons/Settings"]
show_behind_parent = true
margin_left = 433.0
margin_right = 553.0
margin_bottom = 120.0
rect_min_size = Vector2( 120, 120 )
rect_pivot_offset = Vector2( 60, 60 )
custom_styles/panel = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GithubButton" type="TextureButton" parent="Menu/Buttons/Settings/Github"]
self_modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -36.0
margin_top = -36.0
margin_right = 36.0
margin_bottom = 36.0
rect_pivot_offset = Vector2( 50, 50 )
texture_normal = ExtResource( 12 )

[node name="SimonDalvai" type="LinkButton" parent="Menu/Buttons"]
margin_left = 93.0
margin_top = 938.0
margin_right = 479.0
margin_bottom = 1012.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 15 )
text = "simondalvai.org"

[node name="Info" parent="." instance=ExtResource( 10 )]
margin_left = 360.0
margin_top = -640.0
margin_right = 1080.0
margin_bottom = 640.0

[connection signal="pressed" from="LevelSelect/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="LevelSelect/Next" to="." method="_on_Next_pressed"]
[connection signal="pressed" from="LevelSelect/Prev" to="." method="_on_Prev_pressed"]
[connection signal="pressed" from="Menu/Buttons/Level/Level" to="." method="_on_Level_pressed"]
[connection signal="pressed" from="Menu/Buttons/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Menu/Buttons/Settings/Sfx/SfxButton" to="." method="_on_Sfx_pressed"]
[connection signal="pressed" from="Menu/Buttons/Settings/Music/MusicButton" to="." method="_on_Music_pressed"]
[connection signal="pressed" from="Menu/Buttons/Settings/Info/InfoButton" to="." method="_on_InfoButton_pressed"]
[connection signal="pressed" from="Menu/Buttons/Settings/Github/GithubButton" to="." method="_on_GithubButton_pressed"]
[connection signal="pressed" from="Menu/Buttons/SimonDalvai" to="." method="_on_SimonDalvai_pressed"]
[connection signal="back" from="Info" to="." method="_on_Info_back"]
